--- a/Students.Domain/Students.Web/Views/Students/Create.cshtml
+++ b/Students.Domain/Students.Web/Views/Students/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Students.Domain.Models.Student
+﻿@using Students.Domain.Enums
+@model Students.Domain.Models.Student
 
 @{
     ViewData["Title"] = "Create";
@@ -15,7 +16,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control"></select>
+                <select asp-for="Gender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()">
+                    <option selected="selected" value="">Please select</option>
+                </select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
