--- a/Students.Domain/Students.Web/Views/Students/Edit.cshtml
+++ b/Students.Domain/Students.Web/Views/Students/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Students.Domain.Models.Student
+﻿@using Students.Domain.Enums
+@model Students.Domain.Models.Student
 
 @{
     ViewData["Title"] = "Edit";
@@ -16,7 +17,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <select asp-for="Gender" class="form-control"></select>
+                <select asp-for="Gender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()"></select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
