--- a/Students.Domain/Students.Web/Views/Shared/_Layout.cshtml
+++ b/Students.Domain/Students.Web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GroupStudents" asp-action="Index">GroupStudents</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Groups" asp-action="Index">Groups</a>
+                        </li>
                     </ul>
                 </div>
             </div>
