Remove react project, implement filtering and pagination

--- a/Students.Domain/Students.Web/Views/Groups/Index.cshtml
+++ b/Students.Domain/Students.Web/Views/Groups/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Students.Domain.Models.Group>
+﻿@model GroupsViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,27 +10,48 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            by name: <input type="text" name="name" value="@Model.Name" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-action="Index">Reset</a>
+        </p>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                Id
             </th>
-            <th></th>
+            <th>
+                Name
+            </th>
+            <th>
+                Student count
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Groups)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StudentCount)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
